--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,20 +1,1 @@
-// Background colors
-$light-gray: #F7F7F7;
-$gray: #EAEAEA;
-$dark-gray: #353535;
-$gradient: linear-gradient(0deg, rgba(147, 86, 220, 1) 0%, rgba(233, 109, 218, 1) 50%);
-
-// Main theme colors
-$pink: #FF79DA;
-$purple: #9356DC;
-$salmon: #F5EDFF;
-$light-green : #99E2D0;
-
-// Box shadow
-$shadow-main: 0px 2px 8px rgba(0, 0, 0, .3);
-$shadow-main--modifier: 0px 6px 8px rgb(0 0 0 / 30%);
-
-// Useful colors naming
-$background-main: $light-gray;
-$background-location: $gray;
-$background-footer: $dark-gray;
+$main-color: #C64A10;
